package hu.tb.core.domain.meal

enum class Measure {
    GRAM,
    DAG,
    KG,
    PIECE
}